--- a/gk.bib
+++ b/gk.bib
@@ -28632,3 +28632,20 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2019},
   publisher =    {Cambridge University Press}
 }
+@Article{DeFord21,
+  author =       {Daryl DeFord and Natasha Dhamankar and Moon Duchin
+                  and Varun Gupta and Mackenzie McPike and Gabe
+                  Schoenbach and Ki Wan Sim},
+  title =        {Implementing partisan symmetry: Problems and
+                  paradoxes},
+  journal =      {Political Analysis},
+  year =         {2021},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
