--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2755,3 +2755,15 @@ pages={1037--1060},
   year =         {Forthcoming, 2021},
   author =       {Georgina Evans and Gary King}
 }
+@article{KatKinRos2020,
+  title =        {Theoretical foundations and empirical evaluations of
+                  partisan fairness in district-based democracies},
+  author =       {Katz, Jonathan N and King, Gary and Rosenblatt,
+                  Elizabeth},
+  journal =      {American Political Science Review},
+  volume =       {114},
+  number =       {1},
+  pages =        {164--178},
+  year =         {2020},
+  publisher =    {Cambridge University Press}
+}
