--- a/gk.bib
+++ b/gk.bib
@@ -28639,7 +28639,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Implementing partisan symmetry: Problems and
                   paradoxes},
   journal =      {Political Analysis},
-  year =         {2021},
+  year =         {Forthcoming, 2021},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
