--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2765,5 +2765,16 @@ pages={1037--1060},
   number =       {1},
   pages =        {164--178},
   year =         {2020},
-  publisher =    {Cambridge University Press}
+  url =          {GaryKing.org/symmetry}
+}
+@article{CokRudKin2021,
+  author =       {Coker, Beau and Rudin, Cynthia and King, Gary},
+  title =        {A Theory of Statistical Inference for Ensuring the
+                  Robustness of Scientific Results},
+  journal =      {Management Science},
+  pages =        {1--24},
+  year =         {0},
+  doi =          {10.1287/mnsc.2020.3818},
+  URL =          {https://doi.org/10.1287/mnsc.2020.3818},
+  eprint =       {https://doi.org/10.1287/mnsc.2020.3818}
 }
