--- a/gk.bib
+++ b/gk.bib
@@ -28649,3 +28649,20 @@ Theory Group (Formerly: E1071), TU Wien},
   OPTannote =    {}
 }
 
+@Article{Rosenblatt2017,
+  author =       {Elizabeth M. Rosenblatt},
+  title =        {Judging Gerrymandering: Improving Methods for
+                  Measuring Partisan Distortion and Its Component
+                  Parts},
+  journal =      {DASH},
+  year =         {2017},
+  url =          {http://nrs.harvard.edu/urn-3:HUL.InstRepos:38986910},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {Bachelor's thesis, Harvard College},
+  OPTannote =    {}
+}
+
