--- a/gk.bib
+++ b/gk.bib
@@ -28655,14 +28655,8 @@ Theory Group (Formerly: E1071), TU Wien},
                   Measuring Partisan Distortion and Its Component
                   Parts},
   journal =      {DASH},
-  year =         {2017},
+  year =         2017,
   url =          {http://nrs.harvard.edu/urn-3:HUL.InstRepos:38986910},
-  OPTkey =       {},
-  OPTvolume =    {},
-  OPTnumber =    {},
-  OPTpages =     {},
-  OPTmonth =     {},
-  OPTnote =      {Bachelor's thesis, Harvard College},
-  OPTannote =    {}
+  note =         {Bachelor's thesis, Harvard College}
 }
 
