--- a/gk.bib
+++ b/gk.bib
@@ -28657,6 +28657,7 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {DASH},
   year =         2017,
   url =          {http://nrs.harvard.edu/urn-3:HUL.InstRepos:38986910},
-  note =         {Bachelor's thesis, Harvard College}
+  note =         {Bachelor's thesis, Harvard College. Presented at the
+                  Tufts Redistricting Conference May 2017.}
 }
 
