--- a/gk.bib
+++ b/gk.bib
@@ -28660,4 +28660,15 @@ Theory Group (Formerly: E1071), TU Wien},
   note =         {Bachelor's thesis, Harvard College (Presented at the
                   Tufts Redistricting Conference May 2017).}
 }
+@article{OlsFus2012,
+  title =        {Rules Versus Standards: Competing Notions of
+                  Inconsistency Robustness in Patent Law},
+  author =       {Olson, David and Fusco, Stefania},
+  journal =      {Ala. L. Rev.},
+  volume =       {64},
+  pages =        {647},
+  year =         {2012},
+  publisher =    {HeinOnline}
+}
+
 
