--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2725,6 +2725,15 @@ pages={1037--1060},
   doi =          {10.7910/DVN/TDOAPG},
   url =          {https://doi.org/10.7910/DVN/TDOAPG}
 }
+@article{EvaKin21,
+  title =        {Statistically Valid Inferences from Differentially
+                  Private Data Releases, with Application to the
+                  Facebook URLs Dataset},
+  journal =      {Political Analysis},
+  year =         {2021},
+  author =       {Georgina Evans and Gary King},
+  url =          {GaryKing.org/dpd}
+}
 @data{EvaKin20,
   author =       {Evans, Georgina and King, Gary},
   publisher =    {Harvard Dataverse},
@@ -2738,15 +2747,6 @@ pages={1037--1060},
   doi =          {10.7910/DVN/UDFZJD},
   url =          {https://doi.org/10.7910/DVN/UDFZJD}
 }
-@article{EvaKin21,
-  title =        {Statistically Valid Inferences from Differentially
-                  Private Data Releases, with Application to the
-                  Facebook URLs Dataset},
-  journal =      {Political Analysis},
-  year =         {Forthcoming, 2021},
-  author =       {Georgina Evans and Gary King},
-  url =          {GaryKing.org/dpd}
-}
 @article{EvaKin21u,
   title =        {Statistically Valid Inferences from Differentially
                   Private Data Releases, with Application to the
@@ -2755,6 +2755,25 @@ pages={1037--1060},
   year =         {Forthcoming, 2021},
   author =       {Georgina Evans and Gary King}
 }
+@article{EvaKin21b,
+  title =        {Statistically Valid Inferences from Differentially
+                  Private Data Releases II: Extensions to Nonlinear
+                  Transformations},
+  journal =      { },
+  year =         {2021},
+  author =       {Georgina Evans and Gary King},
+  url =          {GaryKing.org/dpd2}
+}
+@Article{EvaKinSmiTha21,
+  author =       {Georgina Evans and Gary King and Adam D. Smith and
+                  Abhradeep Thakurta},
+  title =        {Differentially Private Survey Research},
+  journal =      {Working Paper},
+  url =          {GaryKing.org/DPsurvey},
+  year =         2022
+}
+
+
 @article{KatKinRos2020,
   title =        {Theoretical foundations and empirical evaluations of
                   partisan fairness in district-based democracies},
