--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2457,3 +2457,15 @@ pages={1037--1060},
   author =	 {Gary King and Jennifer Pan and Margaret E. Roberts},
   note ={{ http://j.mp/LdVXqN}}
 }
+@data{KinJerStr2021,
+  author =       {Jerzak, Connor and King, Gary and Strezhnev, Anton},
+  publisher =    {Harvard Dataverse},
+  title =        {{Replication Data for: An Improved Method of
+                  Automated Nonparametric Content Analysis for Social
+                  Science}},
+  year =         {2021},
+  version =      {V1},
+  doi =          {10.7910/DVN/AVNZR6},
+  url =          {https://doi.org/10.7910/DVN/AVNZR6}
+}
+
