--- a/gk.bib
+++ b/gk.bib
@@ -28670,5 +28670,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2012},
   publisher =    {HeinOnline}
 }
-
-
+@inproceedings{HsuGabHae2014,
+  title =        {Differential privacy: An economic method for
+                  choosing epsilon},
+  author =       {Hsu, Justin and Gaboardi, Marco and Haeberlen,
+                  Andreas and Khanna, Sanjeev and Narayan, Arjun and
+                  Pierce, Benjamin C and Roth, Aaron},
+  booktitle =    {2014 IEEE 27th Computer Security Foundations
+                  Symposium},
+  pages =        {398--410},
+  year =         {2014},
+  organization = {IEEE}
+}
