--- a/gk.bib
+++ b/gk.bib
@@ -28682,3 +28682,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2014},
   organization = {IEEE}
 }
+@article{Reiter2012,
+  title =        {Statistical approaches to protecting confidentiality
+                  for microdata and their effects on the quality of
+                  statistical inferences},
+  author =       {Reiter, Jerome P},
+  journal =      {Public opinion quarterly},
+  volume =       {76},
+  number =       {1},
+  pages =        {163--181},
+  year =         {2012},
+  publisher =    {Oxford University Press}
+}
