--- a/gk.bib
+++ b/gk.bib
@@ -28694,3 +28694,17 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2012},
   publisher =    {Oxford University Press}
 }
+@article{DBLP:journals/corr/abs-1811-07971,
+  author    = {Jingcheng Liu and
+               Kunal Talwar},
+  title     = {Private Selection from Private Candidates},
+  journal   = {CoRR},
+  volume    = {abs/1811.07971},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1811.07971},
+  archivePrefix = {arXiv},
+  eprint    = {1811.07971},
+  timestamp = {Wed, 28 Nov 2018 09:26:28 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1811-07971.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
