--- a/gk.bib
+++ b/gk.bib
@@ -28694,7 +28694,7 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2012},
   publisher =    {Oxford University Press}
 }
-@article{DBLP:journals/corr/abs-1811-07971,
+@article{LiuTal2018,
   author    = {Jingcheng Liu and
                Kunal Talwar},
   title     = {Private Selection from Private Candidates},
@@ -28706,5 +28706,29 @@ Theory Group (Formerly: E1071), TU Wien},
   eprint    = {1811.07971},
   timestamp = {Wed, 28 Nov 2018 09:26:28 +0100},
   biburl    = {https://dblp.org/rec/journals/corr/abs-1811-07971.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{DBLP:journals/corr/abs-2012-07805,
+  author    = {Nicholas Carlini and
+               Florian Tram{\`{e}}r and
+               Eric Wallace and
+               Matthew Jagielski and
+               Ariel Herbert{-}Voss and
+               Katherine Lee and
+               Adam Roberts and
+               Tom B. Brown and
+               Dawn Song and
+               {\'{U}}lfar Erlingsson and
+               Alina Oprea and
+               Colin Raffel},
+  title     = {Extracting Training Data from Large Language Models},
+  journal   = {CoRR},
+  volume    = {abs/2012.07805},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2012.07805},
+  archivePrefix = {arXiv},
+  eprint    = {2012.07805},
+  timestamp = {Sat, 02 Jan 2021 15:43:30 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2012-07805.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
