--- a/gk.bib
+++ b/gk.bib
@@ -28708,7 +28708,7 @@ Theory Group (Formerly: E1071), TU Wien},
   biburl    = {https://dblp.org/rec/journals/corr/abs-1811-07971.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-@article{DBLP:journals/corr/abs-2012-07805,
+@article{CarTraWal2020,
   author    = {Nicholas Carlini and
                Florian Tram{\`{e}}r and
                Eric Wallace and
