--- a/gk.bib
+++ b/gk.bib
@@ -28732,3 +28732,13 @@ Theory Group (Formerly: E1071), TU Wien},
   biburl    = {https://dblp.org/rec/journals/corr/abs-2012-07805.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+@article{AlAGhaWal2017,
+  title={Aftermath of bustamante attack on genomic beacon service},
+  author={Al Aziz, Md Momin and Ghasemi, Reza and Waliullah, Md and Mohammed, Noman},
+  journal={BMC medical genomics},
+  volume={10},
+  number={2},
+  pages={43--54},
+  year={2017},
+  publisher={BioMed Central}
+}
