--- a/gk.bib
+++ b/gk.bib
@@ -28742,3 +28742,12 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2017},
   publisher={BioMed Central}
 }
+@inproceedings{BunSte16,
+  title =        {Concentrated differential privacy: Simplifications,
+                  extensions, and lower bounds},
+  author =       {Bun, Mark and Steinke, Thomas},
+  booktitle =    {Theory of Cryptography Conference},
+  pages =        {635--658},
+  year =         {2016},
+  organization = {Springer}
+}
