--- a/gk.bib
+++ b/gk.bib
@@ -28751,3 +28751,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2016},
   organization = {Springer}
 }
+@article{StuLuf2020,
+  title =        {The demise of the survey? A research note on trends
+                  in the use of survey data in the social sciences,
+                  1939 to 2015},
+  author =       {Sturgis, Patrick and Luff, Rebekah},
+  journal =      {International Journal of Social Research
+                  Methodology},
+  pages =        {1--6},
+  year =         {2020},
+  publisher =    {Taylor \& Francis}
+}
