--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2710,7 +2710,7 @@ pages={1037--1060},
                   Schwenzfeier and Abhradeep Thakurta},
   title =        {Statistically Valid Inferences from Privacy
                   Protected Data},
-  journal =      { },
+  journal =      {GaryKing.org/dp},
   year =         2020
 }
 @data{MesDeGHil2020,
