--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2753,6 +2753,7 @@ pages={1037--1060},
                   Facebook URLs Dataset},
   journal =      {Political Analysis},
   year =         {Forthcoming, 2021},
+  url =          {GaryKing.org/dpd},
   author =       {Georgina Evans and Gary King}
 }
 @article{EvaKin21b,
