--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2710,7 +2710,8 @@ pages={1037--1060},
                   Schwenzfeier and Abhradeep Thakurta},
   title =        {Statistically Valid Inferences from Privacy
                   Protected Data},
-  journal =      {GaryKing.org/dp},
+  journal =      { },
+  url =          {GaryKing.org/dp},
   year =         2020
 }
 @data{MesDeGHil2020,
