--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2735,7 +2735,7 @@ pages={1037--1060},
   author =       {Georgina Evans and Gary King},
   url =          {GaryKing.org/dpd}
 }
-@data{EvaKin20,
+@data{EvaKin21b,
   author =       {Evans, Georgina and King, Gary},
   publisher =    {Harvard Dataverse},
   title =        {{Replication Data for: Statistically Valid
@@ -2743,8 +2743,8 @@ pages={1037--1060},
                   Releases, with Application to the Facebook URLs
                   Dataset}},
   UNF =          {UNF:6:qVAL2iA9dusDRaLhZ1X4xg==},
-  year =         {2020},
-  version =      {DRAFT VERSION},
+  year =         {2021},
+  version =      {V1},
   doi =          {10.7910/DVN/UDFZJD},
   url =          {https://doi.org/10.7910/DVN/UDFZJD}
 }
