--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2735,7 +2735,7 @@ pages={1037--1060},
   author =       {Georgina Evans and Gary King},
   url =          {GaryKing.org/dpd}
 }
-@data{EvaKin21b,
+@data{EvaKin21c,
   author =       {Evans, Georgina and King, Gary},
   publisher =    {Harvard Dataverse},
   title =        {{Replication Data for: Statistically Valid
