--- a/gk.bib
+++ b/gk.bib
@@ -28762,3 +28762,23 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2020},
   publisher =    {Taylor \& Francis}
 }
+@article{DomSan20,
+  title={The limits of differential privacy (and its misuse in data release and machine learning)},
+  author={Domingo-Ferrer, Josep and S{\'a}nchez, David and Blanco-Justicia, Alberto},
+  journal={Communications of the ACM},
+  volume={64},
+  number={7},
+  pages={33--35},
+  year={2021},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{AboSch19,
+  title={An economic analysis of privacy protection and statistical accuracy as social choices},
+  author={Abowd, John M and Schmutte, Ian M},
+  journal={American Economic Review},
+  volume={109},
+  number={1},
+  pages={171--202},
+  year={2019}
+}
