--- a/gk.bib
+++ b/gk.bib
@@ -28772,3 +28772,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2021},
   publisher={ACM New York, NY, USA}
 }
+@article{Li2020,
+  title={Statistical inference for average treatment effects estimated by synthetic control methods},
+  author={Li, Kathleen T},
+  journal={Journal of the American Statistical Association},
+  volume={115},
+  number={532},
+  pages={2068--2083},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
