--- a/gk.bib
+++ b/gk.bib
@@ -28782,3 +28782,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2020},
   publisher={Taylor \& Francis}
 }
+@book{Feller71,
+  title =        {An Introduction to Probability Theory and Its
+                  Applications, 3rd Edition},
+  author =       {W. Feller},
+  year =         {1971},
+  publisher =    {Wiley}
+}
