--- a/gk.bib
+++ b/gk.bib
@@ -28789,3 +28789,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1971},
   publisher =    {Wiley}
 }
+@book{Strevens2020,
+  title =        {The knowledge machine: How irrationality created
+                  modern science},
+  author =       {Strevens, Michael},
+  year =         {2020},
+  publisher =    {Liveright Publishing}
+}
