--- a/gk.bib
+++ b/gk.bib
@@ -28796,3 +28796,61 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2020},
   publisher =    {Liveright Publishing}
 }
+@article{Dittmar11,
+  title={Information technology and economic change: the impact of the printing press},
+  author={Dittmar, Jeremiah E},
+  journal={The Quarterly Journal of Economics},
+  volume={126},
+  number={3},
+  pages={1133--1172},
+  year={2011},
+  publisher={MIT Press}
+}
+@article{BenShaHil15,
+  title={Peer production: A form of collective intelligence},
+  author={Benkler, Yochai and Shaw, Aaron and Hill, Benjamin Mako},
+  journal={Handbook of collective intelligence},
+  volume={175},
+  year={2015},
+  publisher={MIT Press Cambridge, MA}
+}
+@incollection{Oreskes21,
+  title={Why trust science?},
+  author={Oreskes, Naomi},
+  booktitle={Why Trust Science?},
+  year={2021},
+  publisher={Princeton University Press}
+}
+@article{Carpenter03,
+  title={Why do bureaucrats delay? Lessons from a stochastic optimal stopping model of agency timing, with applications to the FDA},
+  author={Carpenter, Daniel P},
+  journal={Politics, policy, and organizations frontiers in the scientific study of bureaucracy},
+  pages={23--40},
+  year={2003},
+  publisher={University of Michigan Press}
+}
+@article{Haas92,
+  title={Introduction: epistemic communities and international policy coordination},
+  author={Haas, Peter M},
+  journal={International organization},
+  volume={46},
+  number={1},
+  pages={1--35},
+  year={1992},
+  publisher={Cambridge University Press}
+}
+@techreport{HilSte21,
+  title={Race to the bottom: Competition and quality in science},
+  author={Hill, Ryan and Stein, Carolyn},
+  year={2021},
+  institution={Working Paper}
+}
+@article{AzoFonGra2019,
+  title={Does science advance one funeral at a time?},
+  author={Azoulay, Pierre and Fons-Rosen, Christian and Graff Zivin, Joshua S},
+  journal={American Economic Review},
+  volume={109},
+  number={8},
+  pages={2889--2920},
+  year={2019}
+}
