--- a/gk.bib
+++ b/gk.bib
@@ -28854,3 +28854,58 @@ Theory Group (Formerly: E1071), TU Wien},
   pages={2889--2920},
   year={2019}
 }
+@article{CraSo82,
+  title={Strategic information transmission},
+  author={Crawford, Vincent P and Sobel, Joel},
+  journal={Econometrica: Journal of the Econometric Society},
+  pages={1431--1451},
+  year={1982},
+  publisher={JSTOR}
+}
+@article{OttSor00,
+  title={Information aggregation in debate: who should speak first?},
+  author={Ottaviani, Marco and S{\o}rensen, Peter},
+  journal={Journal of Public Economics},
+  volume={81},
+  number={3},
+  pages={393--421},
+  year={2000},
+  publisher={Elsevier}
+}
+@article{EffPol00,
+  title={Herding and anti-herding: A model of reputational differentiation},
+  author={Effinger, Matthias R and Polborn, Mattias K},
+  journal={European Economic Review},
+  volume={45},
+  number={3},
+  pages={385--403},
+  year={2001},
+  publisher={Elsevier}
+}
+@article{Prendergast93,
+  title={A theory of" yes men"},
+  author={Prendergast, Canice},
+  journal={The American Economic Review},
+  pages={757--770},
+  year={1993},
+  publisher={JSTOR}
+}
+@article{AndSha21,
+  title={A model of scientific communication},
+  author={Andrews, Isaiah and Shapiro, Jesse M},
+  journal={Econometrica},
+  volume={89},
+  number={5},
+  pages={2117--2142},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+@article{SchSun21,
+  title={Using models to persuade},
+  author={Schwartzstein, Joshua and Sunderam, Adi},
+  journal={American Economic Review},
+  volume={111},
+  number={1},
+  pages={276--323},
+  year={2021}
+}
