--- a/gk.bib
+++ b/gk.bib
@@ -28909,3 +28909,11 @@ Theory Group (Formerly: E1071), TU Wien},
   pages={276--323},
   year={2021}
 }
+@book{Fleck35,
+  title={Genesis and development of a scientific fact},
+  author={Fleck, Ludwik},
+  translator={Bradley, Frederick and Trenn, Thaddeus J},
+  date={1979},
+  origdate={1935},
+  publisher={University of Chicago Press}
+}
