--- a/gk.bib
+++ b/gk.bib
@@ -28917,3 +28917,9 @@ Theory Group (Formerly: E1071), TU Wien},
   origdate={1935},
   publisher={University of Chicago Press}
 }
+@book{Popper72,
+  title={All life is problem solving},
+  author={Popper, Karl},
+  year={1972},
+  publisher={Routledge}
+}
