--- a/gk.bib
+++ b/gk.bib
@@ -28923,3 +28923,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year={1972},
   publisher={Routledge}
 }
+@book{kuhn1970structure,
+  title={The structure of scientific revolutions},
+  author={Kuhn, Thomas S},
+  volume={111},
+  year={1970},
+  publisher={Chicago University of Chicago Press}
+}
