--- a/gk.bib
+++ b/gk.bib
@@ -28789,3 +28789,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1971},
   publisher =    {Wiley}
 }
+@article{BauLea95,
+  title =        {The need to belong: desire for interpersonal
+                  attachments as a fundamental human motivation.},
+  author =       {Baumeister, Roy F and Leary, Mark R},
+  journal =      {Psychological bulletin},
+  volume =       {117},
+  number =       {3},
+  pages =        {497},
+  year =         {1995},
+  publisher =    {American Psychological Association}
+}
