--- a/gk.bib
+++ b/gk.bib
@@ -28941,3 +28941,16 @@ Theory Group (Formerly: E1071), TU Wien},
   year={1970},
   publisher={Chicago University of Chicago Press}
 }
+@book{Shapin2018,
+  title =        {The scientific revolution (2nd ed)},
+  author =       {Shapin, Steven},
+  year =         {2018},
+  publisher =    {University of Chicago Press}
+}
+@Book{SchGilNoc2022,
+  author =    {Schacter, D. L. and Gilbert, D. T. and Nock, N.},
+  title =        {Psychology},
+  publisher =    {MacMillan},
+  year =         2022,
+  address =   {NY}}
+
