--- a/gk.bib
+++ b/gk.bib
@@ -28953,4 +28953,12 @@ Theory Group (Formerly: E1071), TU Wien},
   publisher =    {MacMillan},
   year =         2022,
   address =   {NY}}
-
+@article{MerCla2021,
+  title={Does discussion make crowds any wiser?},
+  author={Mercier, Hugo and Claidi{\`e}re, Nicolas},
+  journal={Cognition},
+  volume={222},
+  pages={104912},
+  year={2022},
+  publisher={Elsevier}
+}
