--- a/gk.bib
+++ b/gk.bib
@@ -28954,3 +28954,12 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         2022,
   address =   {NY}}
 
+@article{Nielsen2017,
+  title={Economic growth and the growth of human population in the past 2,000,000 years},
+  author={Nielsen, Ron W},
+  journal={Journal of Economics Bibliography},
+  volume={4},
+  number={2},
+  pages={128--149},
+  year={2017}
+}
