--- a/gk.bib
+++ b/gk.bib
@@ -28952,7 +28952,8 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Psychology},
   publisher =    {MacMillan},
   year =         2022,
-  address =   {NY}}
+  address =   {NY}
+  }
 @article{Nielsen2017,
   title={Economic growth and the growth of human population in the past 2,000,000 years},
   author={Nielsen, Ron W},
@@ -28961,6 +28962,7 @@ Theory Group (Formerly: E1071), TU Wien},
   number={2},
   pages={128--149},
   year={2017}
+  }
 @article{MerCla2021,
   title={Does discussion make crowds any wiser?},
   author={Mercier, Hugo and Claidi{\`e}re, Nicolas},
