--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2753,7 +2753,7 @@ pages={1037--1060},
                   Private Data Releases, with Application to the
                   Facebook URLs Dataset},
   journal =      {Political Analysis},
-  year =         {Forthcoming, 2021},
+  year =         {Forthcoming},
   url =          {GaryKing.org/dpd},
   author =       {Georgina Evans and Gary King}
 }
@@ -2770,9 +2770,9 @@ pages={1037--1060},
   author =       {Georgina Evans and Gary King and Adam D. Smith and
                   Abhradeep Thakurta},
   title =        {Differentially Private Survey Research},
-  journal =      {Working Paper},
+  journal =      {American Journal of Political Science},
   url =          {GaryKing.org/DPsurvey},
-  year =         2022
+  year =         {forthcoming}
 }
 
 
