--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1490,7 +1490,7 @@ pages={1037--1060},
   pages =	 {443--499},
   month =	 9,
   number =	 3,
-  note =	 {{http://j.mp/jCyfF1}}
+  url =	 {j.mp/jCyfF1}
 }
 
 @article{King95b,
