--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2652,7 +2652,7 @@ pages={1037--1060},
   title =        {How to Measure Legislative District Compactness If
                   You Only Know it When You See It},
   journal =      {American Journal of Political Science},
-  year =         {Forthcoming},
+  year =         {forthcoming},
   author =       {Aaron Kaufman and Gary King and Mayya Komisarchik},
   url =          {j.mp/2u9OWrG}
 }
@@ -2753,7 +2753,7 @@ pages={1037--1060},
                   Private Data Releases, with Application to the
                   Facebook URLs Dataset},
   journal =      {Political Analysis},
-  year =         {Forthcoming},
+  year =         {forthcoming},
   url =          {GaryKing.org/dpd},
   author =       {Georgina Evans and Gary King}
 }
