--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2810,4 +2810,10 @@ pages={1037--1060},
   doi =          {10.7910/DVN/AVNZR6},
   url =          {https://doi.org/10.7910/DVN/AVNZR6}
 }
-
+@book{Strevens2020,
+  title =        {The knowledge machine: How irrationality created
+                  modern science},
+  author =       {Strevens, Michael},
+  year =         {2020},
+  publisher =    {Liveright Publishing}
+}
