--- a/gk.bib
+++ b/gk.bib
@@ -28972,3 +28972,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2022},
   publisher={Elsevier}
 }
+@incollection{Byers2010,
+  title =        {How mathematicians think},
+  author =       {Byers, William},
+  booktitle =    {How Mathematicians Think},
+  year =         {2010},
+  publisher =    {Princeton University Press}
+}
