--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2810,10 +2810,15 @@ pages={1037--1060},
   doi =          {10.7910/DVN/AVNZR6},
   url =          {https://doi.org/10.7910/DVN/AVNZR6}
 }
-@book{Strevens2020,
-  title =        {The knowledge machine: How irrationality created
-                  modern science},
-  author =       {Strevens, Michael},
-  year =         {2020},
-  publisher =    {Liveright Publishing}
+@data{EvaKinSch2022,
+  author =       {Evans, Georgina and King, Gary and Schwenzfeier,
+                  Margaret and Thakurta, Abhradeep},
+  publisher =    {Harvard Dataverse},
+  title =        {{Replication Data for: Statistically Valid
+                  Inferences from Privacy Protected Data}},
+  UNF =          {UNF:6:gN2fE/Qm4qDRR/qZ5rriEA==},
+  year =         {2022},
+  version =      {DRAFT VERSION},
+  doi =          {10.7910/DVN/ASUFTY},
+  url =          {https://doi.org/10.7910/DVN/ASUFTY}
 }
