--- a/gk.bib
+++ b/gk.bib
@@ -28979,3 +28979,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2010},
   publisher =    {Princeton University Press}
 }
+@inproceedings{Kavanagh1990,
+  title={Chance and Probability in the Enlightenment},
+  author={Kavanagh, Thomas M},
+  booktitle={French Forum},
+  volume={15},
+  number={1},
+  pages={5--24},
+  year={1990}
+}
+
