--- a/gk.bib
+++ b/gk.bib
@@ -28988,4 +28988,10 @@ Theory Group (Formerly: E1071), TU Wien},
   pages={5--24},
   year={1990}
 }
-
+@article{buffon1777, 
+  title={Essai d'arithm{\'e}tique morale},
+  author={de Buffon, George Louis Leclerc},
+  journal={Euvres philosophiques},
+  year={1777},
+  publisher={Presses Universitaires de France}
+}
