--- a/gk.bib
+++ b/gk.bib
@@ -28995,3 +28995,19 @@ Theory Group (Formerly: E1071), TU Wien},
   year={1777},
   publisher={Presses Universitaires de France}
 }
+@article{Shafer2008,
+  title={A Tutorial on Conformal Prediction.},
+  author={Shafer, Glenn and Vovk, Vladimir},
+  journal={Journal of Machine Learning Research},
+  volume={9},
+  number={3},
+  year={2008}
+}
+@book{BalHoVov14,
+  title =        {Conformal prediction for reliable machine learning:
+                  theory, adaptations and applications},
+  author =       {Balasubramanian, Vineeth and Ho, Shen-Shyang and
+                  Vovk, Vladimir},
+  year =         {2014},
+  publisher =    {Newnes}
+}
