--- a/gk.bib
+++ b/gk.bib
@@ -29011,3 +29011,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2014},
   publisher =    {Newnes}
 }
+@article{Mayhew1974b,
+  title =        {Congressional elections: The case of the vanishing
+                  marginals},
+  author =       {Mayhew, David R},
+  journal =      {Polity},
+  volume =       {6},
+  number =       {3},
+  pages =        {295--317},
+  year =         {1974}
+}
