--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1776,7 +1776,7 @@ pages={1037--1060},
   pages =	 {1142--1164},
   month =	 11,
   number =	 {4},
-  note =	 {{http://gking.harvard.edu/files/abs/inc-abs.shtml}}
+  url = {tinyurl.com/yymdaj5r}
 }
 
 @article{KinAltBur90,
