--- a/gk.bib
+++ b/gk.bib
@@ -28991,7 +28991,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @article{buffon1777, 
   title={Essai d'arithm{\'e}tique morale},
   author={de Buffon, George Louis Leclerc},
-  journal={Euvres philosophiques},
+  journal={Euvres philo\-so\-phiques},
   year={1777},
   publisher={Presses Universitaires de France}
 }
