--- a/gk.bib
+++ b/gk.bib
@@ -29021,3 +29021,72 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {295--317},
   year =         {1974}
 }
+@article{Riker1990,
+  title =        {Heresthetic and rhetoric in the spatial model},
+  author =       {Riker, William H},
+  journal =      {Advances in the spatial theory of voting},
+  volume =       {46},
+  pages =        {50},
+  year =         {1990}
+}
+@article{Shepsle2003,
+  title =        {Losers in politics (and how they sometimes become
+                  winners): William Riker's heresthetic},
+  author =       {Shepsle, Kenneth A},
+  journal =      {Perspectives on politics},
+  volume =       {1},
+  number =       {2},
+  pages =        {307--315},
+  year =         {2003},
+  publisher =    {Cambridge University Press}
+}
+@article{Jacobson2015,
+  title =        {It’s nothing personal: The decline of the incumbency
+                  advantage in US House elections},
+  author =       {Jacobson, Gary C},
+  journal =      {The Journal of Politics},
+  volume =       {77},
+  number =       {3},
+  pages =        {861--873},
+  year =         {2015},
+  publisher =    {University of Chicago Press Chicago, IL}
+}
+@article{Abramowitz2016,
+  title =        {The rise of negative partisanship and the
+                  nationalization of US elections in the 21st century},
+  author =       {Abramowitz, Alan I and Webster, Steven},
+  journal =      {Electoral Studies},
+  volume =       {41},
+  pages =        {12--22},
+  year =         {2016},
+  publisher =    {Elsevier}
+}
+@article{Ferejohn1977,
+  title={On the decline of competition in congressional elections},
+  author={Ferejohn, John A},
+  journal={American Political Science Review},
+  volume={71},
+  number={1},
+  pages={166--176},
+  year={1977},
+  publisher={Cambridge University Press}
+}
+@article{Abramowitz2016,
+  title={The rise of negative partisanship and the nationalization of US elections in the 21st century},
+  author={Abramowitz, Alan I and Webster, Steven},
+  journal={Electoral Studies},
+  volume={41},
+  pages={12--22},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{CarSieWil20,
+  title={Nationalization and the incumbency advantage},
+  author={Carson, Jamie L and Sievert, Joel and Williamson, Ryan D},
+  journal={Political research quarterly},
+  volume={73},
+  number={1},
+  pages={156--168},
+  year={2020},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
