--- a/gk.bib
+++ b/gk.bib
@@ -29090,3 +29090,17 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2020},
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
+@Article{GriKnoWes,
+  author =       {Justin Grimmer and Dean Knox and Sean Westwood},
+  title =        {Assessing the Reliability of Probabilistic US Presidential Election Forecasts May Take Decades},
+  journal =      { },
+  year =         {2022},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
