--- a/gk.bib
+++ b/gk.bib
@@ -29095,3 +29095,9 @@ Theory Group (Formerly: E1071), TU Wien},
   OPTannote =    {}
 }
 
+@book{VovGamSha2005,
+  title={Algorithmic learning in a random world},
+  author={Vovk, Vladimir and Gammerman, Alexander and Shafer, Glenn},
+  year={2005},
+  publisher={Springer Science \& Business Media}
+}
