--- a/gk.bib
+++ b/gk.bib
@@ -29101,3 +29101,16 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2005},
   publisher={Springer Science \& Business Media}
 }
+@book{Hopkins2018,
+  title =        {The increasingly United States: How and why American
+                  political behavior nationalized},
+  author =       {Hopkins, Daniel J},
+  year =         {2018},
+  publisher =    {University of Chicago Press}
+}
+@book{Mccarty2019,
+  title={Polarization: What everyone needs to know{\textregistered}},
+  author={McCarty, Nolan},
+  year={2019},
+  publisher={Oxford University Press}
+}
