--- a/gk.bib
+++ b/gk.bib
@@ -29114,3 +29114,20 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2019},
   publisher={Oxford University Press}
 }
+@article{Leamer1983,
+  title={Let's take the con out of econometrics},
+  author={Leamer, Edward E},
+  journal={American Economic Review},
+  volume={73},
+  number={1},
+  pages={31--43},
+  year={1983}
+}
+@article{GelMenSte96,
+  title={Posterior predictive assessment of model fitness via realized discrepancies},
+  author={Gelman, Andrew and Meng, Xiao-Li and Stern, Hal},
+  journal={Statistica sinica},
+  pages={733--760},
+  year={1996},
+  publisher={JSTOR}
+}
