--- a/gk.bib
+++ b/gk.bib
@@ -29141,3 +29141,9 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2022},
   publisher={Wiley Online Library}
 }
+@book{CauWar2022,
+  title={Dynamic Democracy: Public Opinion, Elections, and Policymaking in the American States},
+  author={Caughey, Devin and Warshaw, Christopher},
+  year={2022},
+  publisher={University of Chicago Press}
+}
