--- a/gk.bib
+++ b/gk.bib
@@ -29147,3 +29147,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2022},
   publisher={University of Chicago Press}
 }
+@article{Flavien23,
+  title={Identification of preferences in forced-choice conjoint experiments: Reassessing the quantity of interest},
+  author={Ganter, Flavien},
+  journal={Political Analysis},
+  volume={31},
+  number={1},
+  pages={98--112},
+  year={2023},
+  publisher={Cambridge University Press}
+}
