--- a/gk.bib
+++ b/gk.bib
@@ -29158,3 +29158,10 @@ Theory Group (Formerly: E1071), TU Wien},
   publisher={Cambridge University Press}
 }
 
+@misc{apsa50,
+  title =        {Toward a More Responsible Two-Party System. A Report
+                  of the Committee on Political Parties},
+  author =       {APSA},
+  journal =      {American Political Science Association},
+  year =         {1950}
+}
