--- a/gk.bib
+++ b/gk.bib
@@ -29162,3 +29162,9 @@ Theory Group (Formerly: E1071), TU Wien},
   author =       {APSA},
   year =         {1950}
 }
+@book{CamConMil80,
+  title={The american voter},
+  author={Campbell, Angus and Converse, Philip E and Miller, Warren E and Stokes, Donald E},
+  year={1980},
+  publisher={University of Chicago Press}
+}
