--- a/gk.bib
+++ b/gk.bib
@@ -29168,3 +29168,23 @@ Theory Group (Formerly: E1071), TU Wien},
   year={1980},
   publisher={University of Chicago Press}
 }
+@article{burkner2017brms,
+  title={brms: An R package for Bayesian multilevel models using Stan},
+  author={B{\"u}rkner, Paul-Christian},
+  journal={Journal of statistical software},
+  volume={80},
+  pages={1--28},
+  year={2017}
+}
+@article{RJ-2018-017,
+  author = {Paul-Christian Bürkner},
+  title = {{Advanced Bayesian Multilevel Modeling with the R Package
+          brms}},
+  year = {2018},
+  journal = {{The R Journal}},
+  doi = {10.32614/RJ-2018-017},
+  url = {https://doi.org/10.32614/RJ-2018-017},
+  pages = {395--411},
+  volume = {10},
+  number = {1}
+}
