--- a/gk.bib
+++ b/gk.bib
@@ -29188,3 +29188,10 @@ Theory Group (Formerly: E1071), TU Wien},
   volume = {10},
   number = {1}
 }
+
+@article{Ber72,
+  title={Atheism: collected essays, 1943-1949},
+  author={Russell, Bertrand},
+  year={1972},
+  publisher={Arno Press}
+}
