--- a/gk.bib
+++ b/gk.bib
@@ -29195,3 +29195,24 @@ Theory Group (Formerly: E1071), TU Wien},
   year={1972},
   publisher={Arno Press}
 }
+
+@article{Luk08,
+  title={Fertility and agriculture accentuate sex differences in dental caries rates},
+  author={Lukacs, John R},
+  journal={Current Anthropology},
+  volume={49},
+  number={5},
+  pages={901--914},
+  year={2008},
+  publisher={The University of Chicago Press}
+}
+
+@article{SilDouDou08,
+  title={Oral health during pregnancy},
+  author={Silk, Hugh and Douglass, Alan B and Douglass, Joanna M and Silk, Laura},
+  journal={American family physician},
+  volume={77},
+  number={8},
+  pages={1139--1144},
+  year={2008}
+}
